Css fix and alignment

--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -1,5 +1,5 @@
 /* General App Styles */
-.App {
+.Admin {
     text-align: center;
     font-family: Arial, sans-serif;
     padding: 30px;
