--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,10 +1,10 @@
 /* General Styles */
-body {
+.body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     margin: 0;
     padding: 0;
-    display: flex;
+    display: grid ;
     justify-content: center;
     align-items: center;
     height: 100vh;
