--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,5 +1,5 @@
 /* General Styles */
-body {
+.body{
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     margin: 0;
